# i3blocks-scripts

./: Cargo.toml  README.md
examples/: hello.rs
src/: lib.rs
