[package]
name = "i3blocks-scripts"
version = "0.1.0"
authors = ["Onur Aslan <onuraslan@gmail.com>"]

[lib]
name = "i3blocks"

[dependencies]
time = { version = "0.1", optional = true }
regex = { version = "0.2", optional = true }

[features]
script_time = ["time"]
script_loadavg = []
script_diskusage = []
script_volume = ["regex"]

[[bin]]
name = "time"
required-features = ["script_time"]

[[bin]]
name = "loadavg"
required-features = ["script_loadavg"]

[[bin]]
name = "diskusage"
required-features = ["script_diskusage"]

[[bin]]
name = "volume"
required-features = ["script_volume"]
